# .ai_scripts

./: .gitignore  .gitmodules  AGENTS.md  README.md  fuzzy_yaml_fix.py  geni-response-schema.yaml  geni-utils.py  geni.sh  geni_new.sh  geni_tests.sh  llm_utils.sh  pyproject.toml  ralfi.sh  requirements.txt
img/: ART.md
python/: patch_file.py
shell/: geni.sh  llm_utils.sh  ralfi.sh  wtf.sh
tests/: primes-clarification_needed.sh  primes-full.sh  primes-patch.sh
