[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geni-tools"
version = "0.1.0"
description = "Python utilities for the geni coding agent"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
fuzzy_yaml_fix = "fuzzy_yaml_fix:main"
patch_file = "patch_file:main"

[tool.setuptools.packages.find]
where = ["./python"]
